Remove deprecated use of `new Integer(int value)`.